# Oauth

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Makefile  README.md  celery.conf  celery.service  celerybeat.service  conftest.py  env.demo  make.ps1  pyproject.toml  pytest.ini  requirements.txt
app 1/: __init__.py  admin.py  apps.py  constants.py  signals.py  tasks.py  urls.py
app 1/exceptions/: __init__.py  party.py
app 1/migrations/: 0001_initial.py  0002_initial.py  0003_remove_partyattachment_other_1_and_more.py  0004_contact_is_existing_extraattachment_is_existing_and_more.py  0005_party_next_node.py  0006_alter_creditlimit_status_alter_party_status_and_more.py  0007_alter_party_remarks.py  0008_alter_party_remarks.py  0009_alter_creditlimit_remarks_and_more.py  0010_party_history_current_stage_and_more.py  0011_shiplocation_authorization_letter_and_more.py  0012_alter_creditlimit_approved_limit_wcl_and_more.py  0013_alter_creditlimit_party_name_and_more.py  0014_shiplocation_default_addr.py  0015_party_business_type_party_email_party_is_tenderable_and_more.py  0016_creditlimit_approved_range.py  0017_guarantee.py  0018_contact_email.py  0019_partyattachment_expiry_date_general_attachment_and_more.py  0020_party_ugc_certificate_file_party_ugc_certificate_no_and_more.py  0021_alter_party_trade_license_and_more.py  0022_alter_party_trade_license_file.py  0023_alter_party_tin_number_and_more.py  0024_alter_creditlimit_stage_alter_party_stage_and_more.py  0025_alter_party_bin_number_alter_party_bin_number_file.py  0026_creditlimit_ebs_info_pulled_creditlimit_grade_and_more.py  0026_party_is_ebs_imported_party.py  0027_party_is_ebs_imported_party.py  0028_remove_creditlimitdetail_judicial_stamp_and_more.py  0029_alter_creditlimit_status_alter_party_status_and_more.py
app 1/models/: __init__.py  base.py  contact_person.py  credit_limit.py  party.py  party_attachment.py  (+2 more)
app 2/: admin.py  tasks.py  urls.py  utils.py
auth_users/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  signals.py  task.py  urls.py  views.py
core/: asgi.py  celery.py  constants.py  error_serializers.py  pagination.py  permissions.py  renderer.py  settings.py  urls.py  validators.py  wsgi.py
dropdown_repository/: admin.py  apps.py  urls.py
main menu/: admin.py  models.py  serializers.py  urls.py  views.py
recommendation_engine/: admin.py  apps.py  models.py  process.py  serializers.py  signals.py  urls.py  views.py
tests/: __init__.py  base_setup.py  user_factories.py
(+133 files in other folders)
